--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha node_modules/mocha/bin/mocha -u tdd test/tests-api.js",
+    "dev": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "express-handlebars": "^4.0.4"
+    "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
+    "formidable": "^1.2.2",
+    "loadtest": "^5.0.4",
+    "mocha": "^5.2.0",
+    "mongoose": "^5.9.20",
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2",
+    "restler": "^3.4.0",
+    "session-mongoose": "^0.5.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
   }
 }
